Further improve the layout

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,6 +10,7 @@
    <!-- CSS -->
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
    <link href="/lib/fontawesome/css/all.css" rel="stylesheet">
+   <link href="/css/style.css" rel="stylesheet">
 
    <!-- Fonts -->
    <link rel='stylesheet' type='text/css' href='https://fonts.googleapis.com/css?family=Habibi|Roboto+Condensed' />
