--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -6,73 +6,59 @@
                 <img class="logo" src="/images/logo-cobbler-new.svg" alt="Cobbler Logo" height="50px"/>
                 <span class="ms-2 fs-4">Cobbler</span>
             </a>
-            <ul class="dropdown-menu dropdown-menu-dark shadow" aria-labelledby="dropdownNav">
+            <ul class="dropdown-menu dropdown-menu-dark shadow px-1" aria-labelledby="dropdownNav">
                 <li class="nav-item px-2">
-                    <a class="text-white text-decoration-none" href="/" title="Home">
+                    <a class="dropdown-item text-white text-decoration-none" href="/" title="Home">
                         <i class="fas fa-home"></i> Home
                     </a>
                 </li>
                 <li class="nav-item px-2">
-                    <a class="text-white text-decoration-none" href="/about.html" title="About">
+                    <a class="dropdown-item text-white text-decoration-none" href="/about.html" title="About">
                         <i class="fas fa-cloud"></i> About
                     </a>
                 </li>
                 <li class="nav-item px-2">
-                    <a class="text-white text-decoration-none" href="/blog/" title="Blog Posts">
+                    <a class="dropdown-item text-white text-decoration-none" href="/blog/" title="Blog Posts">
                         <i class="fas fa-blog"></i> Blog Posts
                     </a>
                 </li>
-                <li class="nav-item px-2 dropdown">
-                    <a class="dropdown-toggle text-white text-decoration-none" href="#" role="button"
-                       id="dropdownMenu2" data-bs-toggle="dropdown" aria-expanded="false">
-                        <i class="fas fa-cloud-download-alt"></i> Downloads
-                    </a>
-                    <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenu2">
-                        <li><a class="dropdown-item" href="/downloads/3.x.x.html">3.x.x</a></li>
-                        <li><a class="dropdown-item" href="/downloads/2.x.x.html">2.x.x</a></li>
-                    </ul>
+                <li class="nav-item px-2">
+                    <h6 class="dropdown-header"><i class="fas fa-cloud-download-alt"></i> Downloads</h6>
                 </li>
-                <li class="nav-item px-2 dropdown">
-                    <a class="dropdown-toggle text-white text-decoration-none" href="#" role="button"
-                       id="dropdownMenu3" data-bs-toggle="dropdown" aria-expanded="false">
-                        <i class="fas fa-users"></i> Community
-                    </a>
-                    <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenu3">
-                        <li>
-                            <a class="dropdown-item" href="/community.html" title="How to Get Help">
-                                How to Get Help</a>
-                        </li>
-                        <li>
-                            <a class="dropdown-item" href="/supporters.html"
-                               title="Supporters of Cobbler">Supporters</a>
-                        </li>
-                        <li>
-                            <a class="dropdown-item" href="/users.html" title="Cobbler Users">Who's Using
-                                Cobbler</a>
-                        </li>
-                    </ul>
+                <li class="nav-item px-2">
+                    <a class="dropdown-item text-white text-decoration-none" href="/downloads/3.x.x.html">Cobbler 3.x.x</a>
                 </li>
-                <li class="nav-item px-2 dropdown">
-                    <a class="dropdown-toggle text-white text-decoration-none" href="#" role="button"
-                       id="dropdownMenu4" data-bs-toggle="dropdown" aria-expanded="false">
-                        <i class="fab fa-github"></i></i> Github</a>
-                    <ul class="dropdown-menu dropdown-menu-dark">
-                        <li>
-                            <a class="dropdown-item" href="https://github.com/cobbler/cobbler"
-                               title="Main Repository"
-                               target="_blank">Main Repo</a>
-                        </li>
-                        <li>
-                            <a class="dropdown-item" href="https://github.com/cobbler/cobbler/issues"
-                               title="Issues"
-                               target="_blank">Issue Tracker</a>
-                        </li>
-                        <li>
-                            <a class="dropdown-item" href="https://github.com/cobbler/cobbler/wiki"
-                               title="Github Wiki"
-                               target="_blank">Wiki</a>
-                        </li>
-                    </ul>
+                <li class="nav-item px-2">
+                    <a class="dropdown-item text-white text-decoration-none" href="/downloads/2.x.x.html">Cobbler 2.x.x</a>
+                </li>
+                <li class="nav-item px-2">
+                    <h6 class="dropdown-header"><i class="fas fa-users"></i> Community</h6>
+                </li>
+                <li class="nav-item px-2">
+                    <a class="dropdown-item text-white text-decoration-none" href="/community.html" title="How to Get Help">
+                        How to Get Help</a>
+                </li>
+                <li class="nav-item px-2">
+                    <a class="dropdown-item text-white text-decoration-none" href="/supporters.html" title="Supporters of Cobbler">Supporters</a>
+                </li>
+                <li class="nav-item px-2">
+                    <a class="dropdown-item text-white text-decoration-none" href="/users.html" title="Cobbler Users">Who's Using Cobbler</a>
+                </li>
+                <li class="nav-item px-2">
+                    <h6 class="dropdown-header"><i class="fab fa-github"></i> Github</h6>
+                </li>
+                <li class="nav-item px-2">
+                    <a class="dropdown-item text-white text-decoration-none" href="https://github.com/cobbler/cobbler"
+                       title="Main Repository"
+                       target="_blank">Main Repo</a>
+                </li>
+                <li class="nav-item px-2">
+                    <a class="dropdown-item text-white text-decoration-none" href="https://github.com/cobbler/cobbler/issues" title="Issues"
+                       target="_blank">Issue Tracker</a>
+                </li>
+                <li class="nav-item px-2">
+                    <a class="dropdown-item text-white text-decoration-none" href="https://github.com/cobbler/cobbler/wiki" title="Github Wiki"
+                       target="_blank">Wiki</a>
                 </li>
             </ul>
         </nav>
