Branding: Add page and make it public through the menu.

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -23,6 +23,12 @@
                     </a>
                 </li>
                 <li class="nav-item px-2">
+                    <a  class="dropdown-item text-white text-decoration-none" href="/branding.html"
+                        title="UI/UX Design Principles">
+                        <i class="fas fa-paint-brush"></i> UI/UX Design Principles
+                    </a>
+                </li>
+                <li class="nav-item px-2">
                     <h6 class="dropdown-header"><i class="fas fa-cloud-download-alt"></i> Downloads</h6>
                 </li>
                 <li class="nav-item px-2">
