Adress some concerns by the review from @nodeg

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -56,6 +56,14 @@
                            data-show-count="false">Follow @cobblerproject</a>
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                     </li>
+                    <li>
+                        <a href="https://matrix.to/#/#cobbler_community:gitter.im?utm_source=gitter">
+                            <svg viewBox="0 0 27.9 32" id="matrix-svg">
+                                <use href="/images/Matrix_icon.svg#matrix-icon" />
+                            </svg> Matrix
+                        </a>
+                    </li>
+                    <li><a href="https://gitter.im/cobbler/community"><i class="fab fa-gitter"></i> Gitter</a></li>
                 </ul>
             </div>
         </div>
