--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,16 +2,17 @@
 
 <footer class="mt-auto bg-dark text-white">
     <div class="container py-3">
-        <div class="row">
-            <div class="col-2">
+        <div class="row justify-content-center">
+            <div class="col-4 col-md-2">
                 <h5>Pages</h5>
                 <ul class="list-unstyled">
                     <li><a href="/">Home</a></li>
                     <li><a href="/blog/">Blog Posts</a></li>
                     <li><a href="/about.html">About Cobbler</a></li>
+                    <li><a href="/attributions.html">Attributions</a></li>
                 </ul>
             </div>
-            <div class="col-2">
+            <div class="col-4 col-md-2">
                 <h5>Manuals</h5>
                 <ul class="list-unstyled">
                     <li><a href="https://cobbler.readthedocs.io/en/latest/quickstart-guide.html">Quickstart</a></li>
@@ -20,7 +21,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="col-2">
+            <div class="col-4 col-md-2">
                 <h5>Community</h5>
                 <ul class="list-unstyled">
                     <li><a href="/community.html">How to Get Help</a></li>
@@ -28,7 +29,7 @@
                     <li><a href="/users.html">Who's Using Cobbler</a></li>
                 </ul>
             </div>
-            <div class="col-2">
+            <div class="col-4 col-md-2">
                 <h5>Github</h5>
                 <ul class="list-unstyled">
                     <li><a href="https://github.com/cobbler/cobbler">Code Repository</a></li>
@@ -36,19 +37,7 @@
                     <li><a href="https://github.com/cobbler/cobbler/wiki">Wiki</a></li>
                 </ul>
             </div>
-            <div class="col-2">
-                <h5>Attributions:</h5>
-                <ul class="list-unstyled">
-                    <li>
-                        "Lens Flare", by <a href="https://creativity103.com/"><img src="/images/creativity103.gif"/></a>
-                    </li>
-                    <li>"Gears", by <a href="https://unsplash.com/@bill_oxford" rel="nofollow">Bill Oxford</a></li>
-                    <li><p>All other content, &copy; <span id="copyyear"></span><br/>by the Cobbler Project</p>
-                        <script>document.querySelector("#copyyear").innerText = (new Date).getFullYear();</script>
-                    </li>
-                </ul>
-            </div>
-            <div class="col-2">
+            <div class="col-4 col-md-2">
                 <h5>Social</h5>
                 <ul class="list-unstyled">
                     <li>
