Nav: Align Menu for Branding

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -24,8 +24,8 @@
                 </li>
                 <li class="nav-item px-2">
                     <a  class="dropdown-item text-white text-decoration-none" href="/branding.html"
-                        title="UI/UX Design Principles">
-                        <i class="fas fa-paint-brush"></i> UI/UX Design Principles
+                        title="Branding">
+                        <i class="fas fa-paint-brush"></i> Branding
                     </a>
                 </li>
                 <li class="nav-item px-2">
