--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,7 +17,7 @@
                 <ul class="list-unstyled">
                     <li><a href="https://cobbler.readthedocs.io/en/latest/quickstart-guide.html">Quickstart</a></li>
                     <li><a href="https://cobbler.readthedocs.io/en/latest/index.html">Documentation</a></li>
-                    <li><a href="https://cobbler.readthedocs.io/en/latest/developer-guide.html">Developer</a>
+                    <li><a href="https://github.com/cobbler/cobbler/wiki/Developer-guide">Developer</a>
                     </li>
                 </ul>
             </div>
